--- a/04_Challenges/movie-database/package.json
+++ b/04_Challenges/movie-database/package.json
@@ -4,13 +4,15 @@
   "description": "or CMDB for short",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "mongodb": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
